fix(#23): allow code fields to overflow/scroll
Additionally this adds a shadow to the side of pre-blocks that have scrollable content.

--- a/_source/assets/css/basics.css
+++ b/_source/assets/css/basics.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
 html,
 body {
     margin: 0;
@@ -6,6 +15,7 @@ body {
 
 body {
     display: grid;
+    grid-template-columns: 100%;
     grid-template-rows: auto 1fr auto;
     color: #fff;
     font-family: "Brendon Text", "Helvetica Neue", sans-serif;
